# vex

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  modules.cmake  version.hpp
cmake/: VexConfig.cmake.in  version.hpp.in  vexConfig.cmake.in
examples/: CMakeLists.txt  example_logger.cpp  example_network.cpp  example_object_pool.cpp
examples/monitoring/: CMakeLists.txt  basic_example.cpp  decorator_example.cpp  full_example.cpp  health_example.cpp  raii_example.cpp
examples/networking/: CMakeLists.txt  advanced_session.cpp  echo_client.cpp  echo_server.cpp  example_session_usage.cpp_  p_client_example.cpp  p_client_list_example.cpp  p_server_example.cpp  simple_client.cpp  simple_server.cpp
examples/networking/simple/: CMakeLists.txt  client.cpp  client_list.cpp  server.cpp
examples/networking/simple/utils/: event.hpp
examples/object_pool/: CMakeLists.txt  example_object_pool.cpp
examples/prometheus_metrics_cpp/: CMakeLists.txt  example_database.cpp  example_full_app.cpp  example_http_server.cpp
examples/thread/: CMakeLists.txt  example_thread_pool.cpp
expirator/: .gitignore  CMakeLists.txt  LICENSE  README.md  SETUP_GUIDE.md
expirator/benchmarks/: CMakeLists.txt  benchmark_comparison.cpp
expirator/cmake/: expiratorConfig.cmake.in
expirator/examples/: CMakeLists.txt  advanced_patterns.cpp  basic_usage.cpp  lockfree_example.cpp  production_scenarios.cpp  timing_wheel_example.cpp
expirator/include/expirator/: base_expirator.hpp  expirator.hpp  heap_expirator.hpp  lockfree_expirator.hpp  timing_wheel_expirator.hpp
expirator/tests/: CMakeLists.txt  simple_test.cpp  test_heap_expirator.cpp  test_integration.cpp  test_lockfree.cpp  test_timing_wheel.cpp
include/vex/: logger.h  networking.h  segmented_logger.hpp  threadpool.h  version.hpp  vex.h
include/vex/logging/: segmented_logger.hpp
include/vex/monitoring/: API.md  decorators.hpp  health_check.hpp  metrics.h  metrics_manager.hpp  monitoring.hpp  raii_guards.hpp  type_safety.hpp
include/vex/networking/: common.hpp  io.hpp  net.hpp  p_client.hpp  p_client_list.hpp  p_server.hpp  pdu.hpp  pinex.hpp
include/vex/networking/common/: bind_type.hpp  command_id.hpp  command_status.hpp  helpers.hpp  serialization.hpp  version.hpp
include/vex/networking/io/: expirator.hpp
include/vex/networking/net/: backpressure_controller.hpp  client.hpp  definitions.hpp  error_handler.hpp  protocol_handler.hpp  server.hpp  session.hpp  session.hpp_  session.hpp_orig  session_builder.hpp  session_config.hpp  session_impl.hpp  session_impl.inl  session_manager.hpp  session_metrics.hpp  session_state.hpp  tcp_utils.hpp  threading_policy.hpp
include/vex/networking/net/detail/: flat_buffer.hpp  ring_buffer.hpp_orig
include/vex/networking/pdu/: bind_request.hpp  bind_response.hpp  stream_request.hpp  stream_response.hpp
include/vex/object_pool/: object_pool.h  object_pool.hpp  thread_local_object_pool.h  thread_local_object_pool.hpp
include/vex/object_pool/internal/: bacj.txt  prometheus_metrics.h  prometheus_metrics.hpp
include/vex/prometheus_cpp_wrapper/: README.md  decorators.hpp  health_check.hpp  metrics_manager.hpp  monitoring.hpp  raii_guards.hpp  type_safety.hpp
include/vex/thread/: threadpool.hpp
modules/logging/: CMakeLists.txt
modules/monitoring/: CMakeLists.txt
modules/networking/: CMakeLists.txt
modules/object_pool/: CMakeLists.txt
modules/thread/: CMakeLists.txt
src/: networking.cpp  segmented_logger.cpp  threadpool.cpp
src/monitoring/: decorators.cpp  health_check.cpp  metrics.cpp  metrics_manager.cpp  raii_guards.cpp
src/prometheus_cpp_wrapper/: decorators.cpp  health_check.cpp  metrics_manager.cpp  raii_guards.cpp
tests/: CMakeLists.txt  pool_tsan_test.cpp
tests/netwroking/: CMakeLists.txt  buffer_performance.cpp_  code_analysis.cpp_  integrity.cpp_
tests/prometheus_metrics_cpp/: CMakeLists.txt  test_main.cpp
tools/: fix_format.sh
